force-app/main/default/objects/PDRI__VCS_Repo__c/PDRI__VCS_Repo__c.object-meta.xml
<CustomObject>
    <label>VCS Repo</label>
    <nameField>
        <displayFormat>VR-{0000000}</displayFormat>
        <label>VCS Repo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCS Repos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>