force-app/main/default/objects/PDRI__VCS_Repo__c/fields/PDRI__Account_URL__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Account_URL__c</fullName>
    <label>Account URL</label>
    <type>Url</type>
</CustomField>