force-app/main/default/objects/PDRI__VCS_Repo__c/fields/PDRI__Auth_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Auth_Type__c</fullName>
    <label>Authorization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OAuth App</fullName>
            </value>
            <value>
                <fullName>GitHub App</fullName>
            </value>
            <value>
                <fullName>Personal Access Token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>