force-app/main/default/objects/PDRI__VCS_Repo__c/fields/PDRI__Repo_Metadata_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Repo_Metadata_Folder_Name__c</fullName>
    <label>Repo Metadata Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>