force-app/main/default/objects/PDRI__VCS_Repo__c/fields/PDRI__Repo_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Repo_Type__c</fullName>
    <label>Repo Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GitHub Cloud</fullName>
            </value>
            <value>
                <fullName>GitHub Enterprise Server</fullName>
            </value>
            <value>
                <fullName>Bitbucket Cloud</fullName>
            </value>
            <value>
                <fullName>Bitbucket Server</fullName>
            </value>
            <value>
                <fullName>Azure Repo</fullName>
            </value>
            <value>
                <fullName>GitLab</fullName>
            </value>
            <value>
                <fullName>GitLab Hosted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>